# ComfyUI_kkTranslator_nodes

./: README.md  README_CN.md  marian_mt_workflow.json  nodes.py  pyproject.toml  requirements.txt
